Attempt at Autoreply

--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -16,11 +16,18 @@
 ;    [Groupname]
 ;    This is the section header.  The word is the name of the group, just name it something appropriate for its permissions.
 ;
-;    CommandWhitelist = command1 command2
+;    CommandWhiteList = command1 command2
 ;    List of commands users are allowed to use, separated by spaces.  Don't include the prefix, i.e. !  Overrides CommandBlacklist if set.
 ;
-;    CommandBlacklist = command1 command2
+;    CommandBlackList = command1 command2
 ;    List if commands users are not allowed to use.  You don't need to use both
+;    whitelist and blacklist since blacklist gets overridden.  Just pick one.
+;
+;    AutoWhiteList = auto1 auto2
+;    List of AutoReplies users are allowed to use, seperated by spaces.  Overrides AutoWhiteList if set.
+;
+;    AutoBlacklist = auto1 auto 2
+;    List of AutoReplies users are not allowed to use.  You don't need to use both
 ;    whitelist and blacklist since blacklist gets overridden.  Just pick one.
 ;
 ;    IgnoreNonVoice = command1 command2
@@ -67,6 +74,8 @@
 [Default]
 CommandWhitelist = play perms queue np skip search id help clean summon
 ; CommandBlacklist =
+; AutoWhiteList =
+; AutoBackList
 IgnoreNonVoice = play skip search
 ; GrantToRoles =
 ; UserList =
@@ -102,6 +111,8 @@ InstaSkip = yes
 [Limited]
 CommandWhitelist = play queue np perms help skip
 ; CommandBlacklist =
+; AutoWhiteList =
+; AutoBlackList =
 IgnoreNonVoice = play skip
 ; GrantToRoles =
 MaxSongLength = 210
