Started Database Connection Software

--- a/config/options.ini
+++ b/config/options.ini
@@ -57,10 +57,13 @@ BlacklistFile = config/blacklist.txt
 ; If you decide to change the file that you have your autoplaylist in, change this vlaue to the correct value here.
 AutoPlaylistFile = config/autoplaylist.txt
 
+; This is the file used to store autoreply commands on a per-server basis.  Change this if you move the file or decide to reorganize the entire file structure of PlasmaBot for some reason.  Which I get sometimes.  I've done it before...
+AutoReplyFile = data/autoreply.db
+
 [MusicModule]
 
-; The starting volume of the bot.  You can use any value from 0.01 to 1.0 but 0.35 is usuallly fine for Music
-DefaultVolume = 0.35
+; The starting volume of the bot.  You can use any value from 0.01 to 1.0 but 0.50 is equivalent to 50% and is usuallly fine for Music.  Be warned that volume must be enabled in permissions for non-owners to use the corresponding >volume command
+DefaultVolume = 0.50
 
 ; Only allow whitelisted users to use commands
 ; Deprecated in favor of permissions
