Updated API-break + Fix on Plugins Module

--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -7,7 +7,6 @@
 ; This bot is made to work with a bot account.  To set the bot up, please fill out the token and Client/App ID below.
 
 Token = Token_from_dev_pannel
-ClientID = Client_Application_ID_from_dev_pannel
 
 ; PlasmaBot can also run off of a standard discord account, although this will need to be a different account than the one you will controll it with.  To use PlasmaBot with an email account, comment out the token and client ID with "; " before each line, uncomment the lines before them, and fill in the correct information.
 
@@ -20,6 +19,10 @@ ClientID = Client_Application_ID_from_dev_pannel
 OwnerID = 000000000000000000
 
 [BotConfiguration]
+
+; This is the Name that the bot will be called by in Bot Responses.  The Default Name is 'PlasmaBot'
+BotName = PlasmaBot
+
 ; These are the standard configuration items that will affect the nature of the entire bot.  Be Careful when editing these configuration items.
 
 ; This is the CommandKey that the bot will recognize before any and all commands triggered by users.  Edit this key if you want the bot to reply to something other than ">" or if your instance of PlasmaBot is interfering with other instances of PlasmaBot
@@ -42,6 +45,9 @@ DeleteMessages = yes
 ; Note the bot must have Manage Messages permission in the channel to delete other messages.
 DeleteInvoking = no
 
+; Allow Bot Invitations?  If yes, others will be able to invite your bot to their own servers
+AllowInvites = yes
+
 [Files]
 
 ; If you change the location of the blacklist file, put the correct value here.
@@ -50,10 +56,13 @@ BlacklistFile = config/blacklist.txt
 ; If you decide to change the file that you have your autoplaylist in, change this vlaue to the correct value here.
 AutoPlaylistFile = config/autoplaylist.txt
 
+; This is the file used to store autoreply commands on a per-server basis.  Change this if you move the file or decide to reorganize the entire file structure of PlasmaBot for some reason.  Which I get sometimes.  I've done it before...
+AutoReplyFile = data/autoreply.db
+
 [MusicModule]
 
-; The starting volume of the bot.  You can use any value from 0.01 to 1.0 but 0.35 is usuallly fine for Music
-DefaultVolume = 0.35
+; The starting volume of the bot.  You can use any value from 0.01 to 1.0 but 0.50 is equivalent to 50% and is usuallly fine for Music.  Be warned that volume must be enabled in permissions for non-owners to use the corresponding >volume command
+DefaultVolume = 0.50
 
 ; Only allow whitelisted users to use commands
 ; Deprecated in favor of permissions
