code close but doesn't work.  #PluginMeta not actually doing anything I think.

--- a/PLASMABOT.current/config/options.ini
+++ b/PLASMABOT.current/config/options.ini
@@ -11,7 +11,7 @@
 ; Bot Accounts use a token to connect and have less restrictions than normal accounts
 ; Public Bots must use a bot account.
 
-Token = Token_From_Developer_Applications_Panel
+Token = MTgyMjAwMTMwMjA2Njk1NDI0.CleLZw.evvy6cuHFl8kMDWIB494lR40z24
 
 ; User Accounts
 ; PlasmaBot can also use a user Account.
@@ -21,15 +21,13 @@ Token = Token_From_Developer_Applications_Panel
 ; Email = discord_bot@gmail.com
 ; Password = discord_bot_password
 
-
 [OwnerInfo]
 ; PlasmaBot needs to know some information about you in order to successfully run and give you permissions
 ; Fill in your User ID (or that of the bot owner account) below to gain elevated permissions
 ; This ID can be found through typing >id in the PlasmaBot Test Server ( https://discord.gg/011Vbr8fyWLeMLg1B ) or
 ; through enabling Developer Mode in the Discord Client, right clicking the bot-owner account, and clicking Copy ID.
 
-OwnerID = 000000000000000000
-
+OwnerID = 180094452860321793
 
 [BotConfiguration]
 ; Configuration on the Appearance of the bot in Bot Responses and it's responsiveness
