Default Plugin w/ ping, invite added, shutdown + restart commands added into base

--- a/PLASMABOT.current/config/options.ini
+++ b/PLASMABOT.current/config/options.ini
@@ -27,7 +27,7 @@ Token = MTgyMjAwMTMwMjA2Njk1NDI0.CleLZw.evvy6cuHFl8kMDWIB494lR40z24
 ; This ID can be found through typing >id in the PlasmaBot Test Server ( https://discord.gg/011Vbr8fyWLeMLg1B ) or
 ; through enabling Developer Mode in the Discord Client, right clicking the bot-owner account, and clicking Copy ID.
 
-OwnerID = 180094452860321793
+OwnerID = 180811529891872768
 
 [BotConfiguration]
 ; Configuration on the Appearance of the bot in Bot Responses and it's responsiveness
@@ -41,7 +41,7 @@ BotName = PlasmaBot
 ; For example, setting the prefix at ! will make >id become !id
 ; Be careful to remember what you set this value to, as it can effect your ability to debug problems with commands if forgotten.
 
-CommandPrefix = >
+CommandPrefix = ~
 
 ; Delete Messages sent by the bot after some time.
 ; Bot must have permission to delete it's own messages.
@@ -58,7 +58,7 @@ DeleteInvoking = no
 ; With a User Account, the bot will attempt to join a server via a provided Invite Link.
 ; This will be automatically overridden if called by the Owner Account as marked via OwnerID.
 
-AllowInvites = yes
+AllowInvites = no
 
 
 [Debug]
