Added pluginDB work and >help

--- a/PLASMABOT.current/config/options.ini
+++ b/PLASMABOT.current/config/options.ini
@@ -11,8 +11,7 @@
 ; Bot Accounts use a token to connect and have less restrictions than normal accounts
 ; Public Bots must use a bot account.
 
-Token = MTgyMjAwMTMwMjA2Njk1NDI0.CleLZw.evvy6cuHFl8kMDWIB494lR40z24
-
+Token = MTgyMjAwMTMwMjA2Njk1NDI0.CmTKSg.r1bXBg0K9-E_reACYCFtlp-_0gY
 ; User Accounts
 ; PlasmaBot can also use a user Account.
 ; To use a User Account, remove the "; " before the Email and Password Fields and
@@ -60,6 +59,11 @@ DeleteInvoking = no
 
 AllowInvites = no
 
+[Files]
+; Configures the locations of files
+
+PluginDB = data/plugins
+SecurityDB = data/security
 
 [Debug]
 ; Prints extra debug options to the terminal
