--- a/PLASMABOT.current/plasmaBot/defaults/example_options.ini
+++ b/PLASMABOT.current/plasmaBot/defaults/example_options.ini
@@ -62,6 +62,11 @@ DeleteInvoking = no
 
 AllowInvites = yes
 
+[Files]
+; Configures the locations of files
+
+PluginDB = data/plugins
+SecurityDB = data/security
 
 [Debug]
 ; Prints extra debug options to the terminal
