Current Push of Testing.  Permissions System not enabled

--- a/PLASMABOT.current/config/options.ini
+++ b/PLASMABOT.current/config/options.ini
@@ -11,7 +11,8 @@
 ; Bot Accounts use a token to connect and have less restrictions than normal accounts
 ; Public Bots must use a bot account.
 
-Token = MTgyMjAwMTMwMjA2Njk1NDI0.CmTKSg.r1bXBg0K9-E_reACYCFtlp-_0gY
+Token = MTgyMjAwMTMwMjA2Njk1NDI0.CmzxiQ.69SNHpPFYTWttxu8g_7_9-HLDqE
+
 ; User Accounts
 ; PlasmaBot can also use a user Account.
 ; To use a User Account, remove the "; " before the Email and Password Fields and
@@ -63,7 +64,7 @@ AllowInvites = no
 ; Configures the locations of files
 
 PluginDB = data/plugins
-SecurityDB = data/security
+PermissionsDB = data/permissions
 
 [Debug]
 ; Prints extra debug options to the terminal
