--- a/PLASMABOT.current/plasmaBot/defaults/example_options.ini
+++ b/PLASMABOT.current/plasmaBot/defaults/example_options.ini
@@ -66,7 +66,7 @@ AllowInvites = yes
 ; Configures the locations of files
 
 PluginDB = data/plugins
-SecurityDB = data/security
+PermissionsDB = data/permissions
 
 [Debug]
 ; Prints extra debug options to the terminal
