started integrating permissions system, added auto-game through config, and fixed a few role event misfires with the plugin system based on wrong attributes in event methods

--- a/PLASMABOT.current/plasmaBot/defaults/example_options.ini
+++ b/PLASMABOT.current/plasmaBot/defaults/example_options.ini
@@ -38,6 +38,11 @@ OwnerID = 000000000000000000
 
 BotName = PlasmaBot
 
+; The Game that will show up next to the Bot in the Server List
+; Certain Variables can be passed in to the Game.  {prefix} passes in the server prefix and {server_count} passes in the # of servers connected
+
+BotGame = {prefix}help | {server_count} servers
+
 ; This is the prefix by which standard commands will be preceded by when called in Discord.
 ; Changing this will change commands from being recognized as >command to {prefix}command
 ; For example, setting the prefix at ! will make >id become !id
