--- a/plasmaBot/defaults/example_options.ini
+++ b/plasmaBot/defaults/example_options.ini
@@ -74,6 +74,9 @@ AllowInvites = yes
 PluginDB = data/plugins
 PermissionsDB = data/permissions
 
+; Plugin Config File Directory
+PLConfigDirectory = plasmaBot/plugins/pl_config
+
 
 [Debug]
 ; Prints extra debug options to the terminal
