Created SelfBot Config Item
Currently does nothing.  Will eventually prevent responses from other accounts that aren't the Owner (via config ID) or the account the bot is using.  Meant to run on the same account as the owner.

--- a/plasmaBot/defaults/example_options.ini
+++ b/plasmaBot/defaults/example_options.ini
@@ -21,6 +21,14 @@ Token = Token_From_Developer_Applications_Panel
 ; Email = discord_bot@gmail.com
 ; Password = discord_bot_password
 
+; Self Bot
+; Initialize this bot as a SelfBot (meant when running off of your account instead of a bot account)
+; To use a Self Bot, Use a User Account instead of the Token as above.
+; This config item, when enabled, will prevent the bot from responding to anyone but the Owner as defined below, and the bot's account.
+; AKA, others won't be able to use the bot, but you will.
+
+SelfBot = False
+
 
 [OwnerInfo]
 ; PlasmaBot needs to know some information about you in order to successfully run and give you permissions
