Updated Example Options to fix a config issue that may appear.

--- a/plasmaBot/defaults/example_options.ini
+++ b/plasmaBot/defaults/example_options.ini
@@ -26,8 +26,9 @@ Token = Token_From_Developer_Applications_Panel
 ; To use a Self Bot, Use a User Account instead of the Token as above.
 ; This config item, when enabled, will prevent the bot from responding to anyone but the Owner as defined below, and the bot's account.
 ; AKA, others won't be able to use the bot, but you will.
+; yes = yes, no = no
 
-SelfBot = False
+SelfBot = no
 
 
 [OwnerInfo]
