Created Config Values for Traceback Redirect Feature

--- a/plasmaBot/defaults/example_options.ini
+++ b/plasmaBot/defaults/example_options.ini
@@ -69,6 +69,15 @@ DeleteMessages = yes
 
 DeleteInvoking = no
 
+; Redirect Tracebacks to a Traceback log channel?
+; If enabled, a channel must be provided for the bot to redirect tracebacks to.
+; This value will be set to False by the bot software if the bot is not in the channel provided.
+; to enable, set TracebackRedirect to "yes" and provide a channel in LogChannel
+
+TracebackRedirect = no
+
+LogChannel = None
+
 ; Allow Invitations to non-personal servers
 ; With a bot account, this will provide an OAuthURL to the User who fires the command.
 ; With a User Account, the bot will attempt to join a server via a provided Invite Link.
