Custom Stream URLS for Bot

--- a/plasmaBot/defaults/example_options.ini
+++ b/plasmaBot/defaults/example_options.ini
@@ -52,6 +52,11 @@ BotName = PlasmaBot
 
 BotGame = {prefix}help | {server_count} servers
 
+; Streaming Preferences
+; If you do not want the bot to show as streaming, set this value to "no".  Else, put a Twitch URL here.
+
+BotStream = https://www.twitch.tv/discordapp
+
 ; This is the prefix by which standard commands will be preceded by when called in Discord.
 ; Changing this will change commands from being recognized as >command to {prefix}command
 ; For example, setting the prefix at ! will make >id become !id
