--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-discord.py[voice]
-sqlitehelper
-requests
-datetime
-numpy<1.11.0
+discord.py[voice]>=1.7.2
+PyNaCl>=1.4.0
+rich>=10.2.2
+ruamel.yaml==0.16.10
+packaging>=20.9
+readchar>=4.0.5
+fuzzywuzzy>=0.18.0
+python-Levenshtein==0.23.0
+peewee>=3.17.0
+mysqlclient>=2.2.1
