Add wrap_output parameter to enable / disable terminal wrapping. Wrap_output should inherently disable the terminal interface.

--- a/plasmaBot/defaults/config.yaml
+++ b/plasmaBot/defaults/config.yaml
@@ -20,6 +20,7 @@ permissions: # Configuration Items impacting the abilities of certain users
   - 180094452860321793 # Bot Developer
 
 terminal: # Configuration Items regarding the Client's command line interface
+  wrap_output: true # Whether or not the terminal interface should wrap output
   enabled: true # Whether or not the terminal interface is enabled
   prefix: '/' # The prefix for commands sent through the terminal
   channel: null # Channel ID to which the terminal interface is bound
