--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ readchar>=4.0.5
 fuzzywuzzy>=0.18.0
 python-Levenshtein==0.23.0
 peewee>=3.17.0
+peewee-async[mysql]>=1.0.0
 mysqlclient>=2.2.1
 matplotlib>=3.8.4
 aiotba>=0.0.3.post2
